# parsebot-for-sale

./: .gitignore  ;  Dockerfile  README.md  asyncache.nix  config.py  flake.nix  main.py  middleware.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
TODO/: Readme.md  TODO.md
control_db/: __init__.py  premium_operations.py  premium_user.py  user.py
data/: database.db
handlers/: admin.py  menu.py  parsing.py  payments.py  task.py  telegram.py
keyboards/: admin.py  menu.py  premium.py
olxparser/: parser.py
src/: __main__.py  config.py  global_variable.py  menu.py  middleware.py  payments.py
src/control_db/: __init__.py  premium_operations.py  premium_user.py  urls.py  user.py
src/database/: __init__.py  premium_operations.py  premium_user.py  urls.py  user.py
src/handlers/: admin.py  menu.py  parsing.py  payments.py  task.py  telegram.py
src/keyboards/: admin.py  menu.py  parsing_edit.py  premium.py  setting.py
src/olx_api/: __init__.py
src/parser/: parser.py
src/tests/: test_parser.py
