[tool.poetry]
name = "parsebotforsale"
version = "1.0"
description = ""
authors = ["salko-ua <chips69jamil69game@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
aiosqlite = "^0.20.0"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
translate = "^3.6.1"
sentry-sdk = "^1.44.0"
selenium = "^4.19.0"
cachetools = "^5.3.3"
apykuma = "^1.2.0"
asyncache = "^0.3.1"
python-dateutil = "^2.9.0"

[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
