[project]
name = "parsebot-for-sale"
version = "0.1.0"
description = ""
authors = [
    {name = "salko-ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiogram (>=3.18.0,<4.0.0)",
    "sentry-sdk (>=2.22.0,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
